# vsc_desktop

./: CLAUDE.md  pompt.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-29-crypto-core.md  2026-05-29-local-storage.md  2026-05-29-storage.md  2026-05-30-centralized.md  2026-05-30-decentralized.md  2026-05-31-e2e-integration.md  2026-06-01-p2p-gui-wiring.md  2026-06-28-message-display.md
docs/superpowers/specs/: 2026-05-29-local-storage.md  2026-05-29-mys-desktop-design.md  2026-05-29-ui-shell.md  2026-05-30-centralized.md  2026-05-30-decentralized.md  2026-05-30-server-centralized-api.md  (+4 more)
packaging/: README.md  install.sh  mys-desktop.desktop  uninstall.sh
packaging/appimage/: build-appimage.sh  entrypoint.sh
packaging/macos/: make-icns.sh
packaging/pyinstaller/: launcher.py
packaging/windows/: installer.iss
scripts/: README.md  run_rendezvous.py  smoke.py
src/mys_centralized/: __init__.py  account.py  api_client.py  errors.py  media.py  models.py  service.py  sync.py  ws_client.py
src/mys_crypto/: __init__.py  _ristretto.py  envelope.py  pake.py  primitives.py  ratchet.py  secure.py  transform.py
src/mys_decentralized/: __init__.py  errors.py  filetransfer.py  handshake.py  protocol.py  rendezvous.py  rendezvous_server.py  service.py  session.py  transport.py
src/mys_storage/: __init__.py  errors.py  kdf.py  migrations.py  repositories.py  schema.py  sidecar.py  vault.py
src/mys_ui/: __init__.py  app.py  controller.py  paths.py  prefs.py  theme.py
src/mys_ui/dialogs/: central.py  (+3 more)
tests/: conftest.py  test_central_account.py  test_centralized_api.py  test_centralized_models.py  test_centralized_service.py  test_centralized_sync.py  test_centralized_ws.py  test_chat_view.py  test_code_block.py  test_decentralized_integration.py  test_e2e_centralized.py  test_e2e_p2p.py  test_envelope.py  test_filetransfer.py  test_handshake.py  test_integration.py  test_media_view.py  test_message_text.py  test_migrations.py  test_p2p_banner.py  test_p2p_gui_wiring.py  test_pake.py  test_primitives.py  test_protocol.py  test_ratchet.py  test_ratchet_persistence.py  test_rendezvous.py  test_repositories.py  test_secure.py  test_session.py  test_sidecar.py  test_storage_integration.py  test_transform.py  test_transport.py  test_ui_centralized.py  test_ui_chat_view.py  test_ui_controller.py  test_ui_main_window.py  test_ui_phrase_dialog.py  test_ui_unlock.py  (+1 more)
(+14 files in other folders)
