[project]
name = "mys-crypto"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "sqlcipher3-binary>=0.6",
    "PySide6-Essentials>=6.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.4"]

[tool.setuptools.packages.find]
where = ["src"]
